# recruiting-platform

./: .env.example  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  INSTRUCTIONS.md  README.md  ROADMAP.md
backend/: README.md  pyproject.toml
backend/app/: main.py  seed.py
backend/app/agents/: __init__.py  calendar_agent_stub.py  general_chat_agent.py  qna_agent.py  router_agent.py
backend/app/api/: chat_routes.py  deps.py
backend/app/api/routes/: __init__.py  agent.py  agent_candidates.py  agent_jobs.py  applications.py  auth.py  candidates.py  chat_routes.py  jobs.py  matching.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: seed_jobs.yaml
backend/app/models/: application.py  candidate.py  job.py  match_log.py  organization.py  user.py
backend/app/qna_graph/: __init__.py  age_graph_client.py  graph_client_base.py  models.py  neptune_graph_client.py  repository.py  scoring.py  service.py  yaml_loader.py
backend/app/qna_graph/config/: candidate_programming_language.yaml  job_programming_language.yaml
backend/app/schemas/: applications.py  auth.py  candidates.py  chat.py  jobs.py  matching.py
backend/app/services/: agent.py  agent_candidate.py  agent_job.py  matching.py
backend/app/utils/: langgraph_state.py
docs/: AGELocalDev.md  QAGraph.md
frontend/: README.md  pyproject.toml  streamlit_app.py
frontend/pages/: 01_Auth_Login.py  02_App_Chat.py  03_Jobs.py  04_Candidates.py  05_Jobs_and_Candidates.py  (+1 more)
infra/: Dockerfile.backend  Dockerfile.base  Dockerfile.frontend  docker-compose.yml
(+1 files in other folders)
